syntax = "proto3";

package rating.poutine.v1;

option go_package = "github.com/dduzgun-security/jug/jug-model/jug-model-go/rating/poutine/v1;poutinev1";
option java_package = "com.rating.poutine.v1";
option java_multiple_files = true;

message Poutine {
    string restaurant = 1;
    uint32 cheese_squeakiness = 2;
    uint32 gravy_thickness = 3;
    uint32 fries_crispiness = 4;
    string size = 5;
    string comments = 6;
}

message CreateRatingRequest {
    int64 user_id = 1;
    Poutine rating = 2;
}

message CreateRatingResponse {
    Poutine rating = 1;
}

message GetRatingRequest {
    int64 rating_id = 1;
}

message GetRatingResponse {
    Poutine rating = 1;
}

message ListRatingsRequest {}

message ListRatingsResponse {
    repeated Poutine ratings = 1;
}

message ListRatingsByRestaurantRequest {
    string restaurant = 1;
}

message ListRatingsByRestaurantResponse {
    repeated Poutine ratings = 1;
}

service PoutineService {
    rpc CreateRating(CreateRatingRequest) returns (CreateRatingResponse);
    rpc GetRating(GetRatingRequest) returns (GetRatingResponse);
    rpc ListRatings(ListRatingsRequest) returns (ListRatingsResponse);
    rpc ListRatingsByRestaurant(ListRatingsByRestaurantRequest) returns (ListRatingsByRestaurantResponse);
}